--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
             white-space: pre;
         }
     </style>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XLD1DYSFVS"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-XLD1DYSFVS');
+	</script>
 </head>
 <body class="bg-light py-5">
 <div class="container">
