Add sitemap, SEO metatag, JSON-LD structured data

--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Storage Converter</title>
+    <!-- SEO Meta Tags -->
+	<meta name="description" content="Interactive Computer Data Storage Converter: convert between binary (IEC) and decimal (SI) units, explore memory mapping, hierarchy diagrams, and historical references.">
+	<meta name="keywords" content="computer storage, data converter, binary units, decimal units, memory mapping, KiB, MiB, GiB, KB, MB, GB, data units, storage calculator">
+	<meta name="author" content="Carl Angelo Nievarez">
+	<meta name="robots" content="index, follow">
+	
+	<!-- Open Graph for social media sharing -->
+	<meta property="og:title" content="Computer Data Storage Converter & Memory Mapper">
+	<meta property="og:description" content="Interactive converter for binary and decimal storage units, memory mapping, hierarchy diagrams, and historical references.">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://aice09.github.io/computer-storage-converter/">
+	<meta property="og:image" content="https://aice09.github.io/computer-storage-converter/preview.png">
+	
+	<!-- Twitter Card -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Computer Data Storage Converter & Memory Mapper">
+	<meta name="twitter:description" content="Interactive converter for binary and decimal storage units, memory mapping, hierarchy diagrams, and historical references.">
+	<meta name="twitter:image" content="https://aice09.github.io/computer-storage-converter/preview.png">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <style>
@@ -24,6 +42,29 @@
 	
 	  gtag('config', 'G-XLD1DYSFVS');
 	</script>
+	 <!-- JSON-LD Structured Data -->
+	  <script type="application/ld+json">
+	  {
+	    "@context": "https://schema.org",
+	    "@type": "SoftwareApplication",
+	    "name": "Computer Data Storage Converter",
+	    "applicationCategory": "Utilities",
+	    "operatingSystem": "Web",
+	    "url": "https://aice09.github.io/computer-storage-converter/",
+	    "description": "Convert and explore computer storage units (binary & decimal), memory mapping, hierarchy diagrams, and historical references.",
+	    "author": {
+	      "@type": "Person",
+	      "name": "Carl Angelo Nievarez"
+	    },
+	    "featureList": [
+	      "Binary & Decimal unit conversion",
+	      "Memory mapping table",
+	      "Hierarchy diagram of data units",
+	      "Historical references and standards"
+	    ]
+	  }
+	  </script>
+	 <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
 </head>
 <body class="bg-light py-5">
 <div class="container">
