--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+	<link rel="manifest" href="/favicon/site.webmanifest">
+
     <!-- SEO Meta Tags -->
 	<meta name="description" content="Interactive Computer Data Storage Converter: convert between binary (IEC) and decimal (SI) units, explore memory mapping, hierarchy diagrams, and historical references.">
 	<meta name="keywords" content="computer storage, data converter, binary units, decimal units, memory mapping, KiB, MiB, GiB, KB, MB, GB, data units, storage calculator">
