--- a/index.html
+++ b/index.html
@@ -274,6 +274,18 @@
         </div>
     </div>
 </div>
+<footer class="mt-5 py-4 bg-light text-center border-top">
+    <div class="container">
+        <p class="mb-1">Developed by <strong>Carl Angelo Nievarez</strong></p>
+        <p class="mb-1">
+            GitHub: 
+            <a href="https://github.com/aice09/computer-storage-converter" target="_blank">
+                aice09 / Computer Storage Converter
+            </a>
+        </p>
+        <p class="small text-muted">&copy; 2025 All rights reserved.</p>
+    </div>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
